# sanguobaye_c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
baye-ios/: Baye-iOS copy-Info.plist
baye-ios/Baye/: AppDelegate.h  AppDelegate.m  Info.plist  LCDView.h  LCDView.m  MacViewController.h  MacViewController.m  baye-wrapper-mac.c  baye-wrapper-mac.h  main.m
baye-ios/Baye-iOS/: AppDelegate.h  AppDelegate.m  GamLCDView.h  GamLCDView.m  GamTouchPadView.h  GamTouchPadView.m  ViewController.h  ViewController.m  main.m
baye-ios/Baye-iOS/Base.lproj/: Main.storyboard
baye-ios/Baye-iOS/Images.xcassets/AppIcon.appiconset/: Contents.json
baye-ios/Baye/Base.lproj/: Main.storyboard
baye-ios/baye-ios.xcodeproj/: project.pbxproj
baye-ios/baye-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
baye-ios/baye-ios.xcodeproj/xcuserdata/loong.xcuserdatad/xcschemes/: Baye-Mac.xcscheme  Baye-iOS.xcscheme  xcschememanagement.plist
js/: .gitignore  config.sh  genver.py  whitelist.json
js/submodules/msgpack-c/: msgpack.pc
src/: CMakeLists.txt  FgtCount.c  FgtPkAi.c  Fight.c  FightSub.c  PublicFun.c  Size.c  bind-objects.c  citycmd.c  citycmdb.c  citycmdc.c  citycmdd.c  citycmde.c  cityedit.c  comIn.c  comOut.c  config.c  dat.lib.orig  data-bind.c  datman.c  debug.c  fsys.c  gamEng.c  infdeal.c  itoa.c  main.c  paccount.c  pconst.c  picture.asm  pstring.c  res-msgpack.c  res-msgpack.h  showface.c  strcnt.c  tactic.c  touch.c  touch.h  varma.c  version.c
src/baye/: attribute.h  bind-objects.h  comm.h  compa.h  consdef.h  data-bind.h  datman.h  enghead.h  errcode.h  extern.h  fight.h  fsys.h  fundec.h  fundef.h  graph.h  itoa.h  order.h  paccount.h  resource.h  sconst.h  script.h  sharefun.h  sources.h  stdsys.h
src/data/: pconst.h  pstring.h
src/inc/: ADDR.H  DictAfx.h  DictHelp.h  GuiEdit.h  MEM.H  SysResv.h  dictsys.h  filetype.h  flash.h  fsys.h  keytable.h  shell.h
src/platform/common/: bios.c  gui.c  sem.h  sys.c  timer.h
src/platform/ios/: dummy-script.c  fsys.c  sem.m  sys-ios.c  timer.m
src/platform/js/: dat.lib.c  exportjs.c  font.bin.c  fsys.c  main.c  script.c  sem.c  sys-js.c  timer.c
src/platform/win/: fsys.c  game.c  script.c  sem.c  sys.c  timer.c  window.c
submodules/: CMakeLists.txt
